# wodates

./: .editorconfig  .eslintignore  .gitattributes  .gitignore  AGENTS.md  AGE_RANGE_PICKER_IMPLEMENTATION.md  AGE_RANGE_SLIDER_UI_FIX.md  BIRTHDATE_PICKER_MIGRATION.md  CHAT_KEYBOARD_FIX.md  CONTRIBUTING.md  DATE_PICKER_IMPROVEMENTS.md  DATE_PICKER_WEB_FIX.md  INSTRUCCIONES_REBUILD_ANDROID.md  KEYBOARD_FIX_SUMMARY.md  LICENSE  README-ASM.md  README.md  SECURITY.md  WEB_PLATFORM_FIX.md  WEB_UPLOAD_IMPLEMENTATION.md  cursor_session_wodates.md  metro.config.js  metro.transformer.js  package-lock.json  prompts-ASM.md
ai-service/: .gitignore  GEMINI_INTEGRATION.md  README.md  check.py  env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
ai-service/app/api/: agent.py  chat.py  embeddings.py  explanations.py  profile.py
ai-service/app/core/: __init__.py  settings.py
ai-service/app/llm/: __init__.py  gemini_client.py  llm_client.py  llm_factory.py  ollama_client.py  openai_client.py
ai-service/app/schemas/: __init__.py  agent.py  chat.py  embeddings.py  explanations.py  profile.py
ai-service/app/services/: __init__.py  agent_service.py  chat_service.py  embedding_service.py  explanation_service.py  profile_service.py
ai-service/scripts/: diagnose_ollama.py  test_gemini.py
ai-service/tests/: __init__.py  test_agent_schemas.py  test_ollama_client_urls.py
backend-api/: .eslintrc.cjs  .eslintrc.js  README.md  env.example  package-lock.json  package.json  tsconfig.json
docs/: 00_PROJECT_INFO.md  01_SYSTEM_ARCHITECTURE.md  02_DATA_MODEL.md  (+13 more)
(+530 files in other folders)
