[project]
name = "wodates-ai-service"
version = "1.0.0"
description = "WODATES AI Service - FastAPI microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "taskipy>=1.12.0",
]

[tool.taskipy.tasks]
type-check = "mypy app main.py"
lint = "ruff check app main.py"
lint-fix = "ruff check --fix app main.py"
format = "ruff format app main.py"
test = "pytest tests/"
check = "task type-check && task lint"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

